# dashcam-anonymizer

./: .env.test  .gitignore  AGENTS.md  INFRASTRUCTURE.md  README.md  docker-compose.test.yml  processing-workflow-rules.md  setup-dev-environment.sh  start-test-env.sh  stop-test-env.sh
.github/: copilot-instructions.md
backend-utils/: README.md  database_client.py
scripts/: deploy-all.sh  deploy-core.sh  deploy-workers.sh  test-rabbitmq-worker.sh
services/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_backend.py  run_tests.sh
services/backend/src/dashcam_backend/: __init__.py  config.py  file_cleanup.py  health.py  logging.py  main.py  message_handlers.py  models.py  mongodb_client.py  mongodb_sync_client.py  rabbitmq_client.py  storage_client.py  video_api.py
services/backend/tests/: conftest.py  test_config.py  test_duplicate_video_handling.py  test_file_cleanup.py  test_models.py  test_mongodb_client.py  test_rabbitmq_client.py  test_video_api.py
services/frontend/: Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.js  nginx.conf  package-lock.json  package.json  run_dev.sh  tailwind.config.js  tsconfig.json
services/minio/: Dockerfile  README.md
services/mongodb/: README.md
services/nginx/: README.md
services/payment/: README.md
services/rabbitmq/: Dockerfile  README.md
services/worker/: .dockerignore  .env.example  Dockerfile  README.md  pytest.ini  requirements.txt  run_tests.sh  setup.py  setup.sh
specifications/: backend.md  frontend.md  infrastructure.md  payment.md  worker.md
(+58 files in other folders)
